fix: image scaling, containers, z-index need removal

--- a/app/components-react/pages/onboarding/Connect.m.less
+++ b/app/components-react/pages/onboarding/Connect.m.less
@@ -1,13 +1,19 @@
 @import "../../../styles/index";
 
+.page-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .container {
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-
-  margin-top: 10%;
 
   h1 {
     margin-bottom: 8px;
@@ -73,6 +79,18 @@
   pointer-events: none;
   width: 100%;
   height: 100%;
+
+  #oval-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+
+  #oval-left {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
 
 }
 
