--- a/app/components-react/pages/onboarding/Onboarding.m.less
+++ b/app/components-react/pages/onboarding/Onboarding.m.less
@@ -13,6 +13,8 @@
   height: 24px;
   margin-top: 60px;
   position: absolute;
+  z-index: 1;
+  pointer-events: none;
 }
 
 .top-bar-segment {
@@ -75,6 +77,7 @@
   bottom: 0;
   padding: 24px 0;
   width: 100%;
+  pointer-events: none;
 
   .progress {
     display: flex;
@@ -83,11 +86,11 @@
     justify-content: center;
     margin-top: 40px;
 
-    @media (min-height: 700px) {
+    @media (min-height: 800px) {
       margin-bottom: 40px;
     }
 
-    @media (max-height: 700px) {
+    @media (max-height: 799px) {
       display: none;
     }
 
@@ -114,7 +117,17 @@
     position: absolute;
     bottom: 60px;
     right: 40px;
+    z-index: 2;
+    pointer-events: auto;
+
+    @media (max-height: 799px) {
+      bottom: 10px;
+    }
   }
+}
+
+.action-button {
+  margin-bottom: 8px;
 }
 
 .link-button {
